# apibasics

./: README.md  manage.py  pyproject.toml
apibasics/: asgi.py  settings.py  urls.py  wsgi.py
apps/employee/: models.py  urls.py  views.py
apps/employee/migrations/: 0001_initial.py
apps/nestedserializers/: apiviews.py  models.py  serializers.py  urls.py
apps/nestedserializers/migrations/: 0001_initial.py  0002_auto_20210324_1642.py
apps/polls/: admin.py  apiviews.py  models.py  serializers.py  urls.py  views.py
apps/polls/migrations/: 0001_initial.py  0002_alter_vote_unique_together_vote_unique_poll_voted_by.py
apps/student/: models.py  serializers.py  urls.py  views.py
apps/student/migrations/: 0001_initial.py
config/: settings.py  urls.py
